manifests/guacamole/guacamole-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-web
  labels:
    app: guacamole-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole-web
  template:
    metadata:
      labels:
        app: guacamole-web
    spec:
      containers:
      - name: guacamole
        image: guacamole/guacamole:1.5.4
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole-web
spec:
  selector:
    app: guacamole-web
  ports:
  - port: 8080
    targetPort: 8080
