manifests/guacamole/guacd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-guacd
  labels:
    app: guacamole-guacd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole-guacd
  template:
    metadata:
      labels:
        app: guacamole-guacd
    spec:
      containers:
      - name: guacd
        image: guacamole/guacd:1.5.4
        ports:
        - containerPort: 4822
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole-guacd
spec:
  selector:
    app: guacamole-guacd
  ports:
  - port: 4822
    targetPort: 4822
